--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
-    background-color: aqua;
+    background-color: #304D30;
     font-family: Arial, sans-serif;
+
 }
 
 .container {
@@ -45,9 +46,44 @@ body {
     display: none;
     cursor: pointer;
 }
+.Plant{
+    margin-right: 70px;
+}
+.perfect{
+    margin-left: 70px;
+    margin-top: 150px;
+    font-style: italic;
+}
+.par{
+    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    line-height: 5px;
+}
+h1 {
+    line-height: 24px;
+}
 
-.home{
-    
+/* Basic styling for the button */
+#buy-now-button {
+    padding: 10px 20px;
+    background-color: white;
+    color: gray;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Change button color on hover */
+#buy-now-button:hover {
+    background-color: #45a049;
+}
+.buy-now{
+    margin-top: 70px;
 }
 
 
