--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 
 }
 
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -13,7 +14,7 @@ body {
 }
 
 #navbar {
-    background-color: #333;
+    background-color: blue;
     color: #fff;
 }
 
@@ -95,4 +96,16 @@ h1 {
     #menu-icon {
         display: block;
     }
+}
+
+.plant_shop{ 
+    transition: background-color 0.3s ease;
+}
+
+.plant_shop:hover{
+    background-color: #0b738d;
+}
+.main{
+    width: 100%;
+    height: 100%;
 }
