--- a/css/plant.css
+++ b/css/plant.css
@@ -1,4 +1,9 @@
 body{
-    width: 100%;
-    background-color: rgb(85, 53, 13);
+    margin: 0;
+    background-color: #304D30;
+    font-family: Arial, sans-serif;
+    background-image: url(../images/ab.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
