--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
     background-color: #304D30;
     font-family: Arial, sans-serif;
+    background-image: url(../images/leaf.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
@@ -14,8 +18,9 @@ body {
 }
 
 #navbar {
-    background-color: blue;
+    background-color: rgb(12, 128, 79);
     color: #fff;
+    height: 100px;
 }
 
 #navbar h1 {
@@ -108,4 +113,8 @@ h1 {
 .main{
     width: 100%;
     height: 100%;
+}
+.big{
+    width: 50px;
+    height: 50px;
 }
